{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 10,
  "lineage": "1db1e3b2-cc5c-78e3-58da-a51b6ef8487b",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "443",
                  "80",
                  "8291"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-05-15T08:37:23.913-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fresh-waters-458716-e1/global/firewalls/fw-allow-ssh",
            "log_config": [],
            "name": "fw-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/fresh-waters-458716-e1/global/networks/my-vpc",
            "priority": 1000,
            "project": "fresh-waters-458716-e1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fresh-waters-458716-e1/global/firewalls/fw-allow-ssh",
            "source_ranges": [
              "73.160.220.29/32"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh-allowed"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_icmp_to_snmp_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-05-15T08:37:23.893-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fresh-waters-458716-e1/global/firewalls/allow-icmp-to-snmp-external",
            "log_config": [],
            "name": "allow-icmp-to-snmp-external",
            "network": "https://www.googleapis.com/compute/v1/projects/fresh-waters-458716-e1/global/networks/my-vpc",
            "priority": 1000,
            "project": "fresh-waters-458716-e1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fresh-waters-458716-e1/global/firewalls/allow-icmp-to-snmp-external",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "snmp-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_snmp_to_snmp_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "161"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2025-05-15T08:37:23.851-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fresh-waters-458716-e1/global/firewalls/allow-snmp-to-snmp-server",
            "log_config": [],
            "name": "allow-snmp-to-snmp-server",
            "network": "https://www.googleapis.com/compute/v1/projects/fresh-waters-458716-e1/global/networks/my-vpc",
            "priority": 1000,
            "project": "fresh-waters-458716-e1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fresh-waters-458716-e1/global/firewalls/allow-snmp-to-snmp-server",
            "source_ranges": [
              "10.20.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "snmp-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "lab_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/fresh-waters-458716-e1/global/networks/lab-vpc",
            "mtu": 0,
            "name": "lab-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "5768898657987049276",
            "numeric_id": "5768898657987049276",
            "project": "fresh-waters-458716-e1",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fresh-waters-458716-e1/global/networks/lab-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/fresh-waters-458716-e1/global/networks/my-vpc",
            "mtu": 0,
            "name": "my-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "2035530488064430467",
            "numeric_id": "2035530488064430467",
            "project": "fresh-waters-458716-e1",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fresh-waters-458716-e1/global/networks/my-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "lab_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-15T08:35:59.397-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.30.0.1",
            "id": "projects/fresh-waters-458716-e1/regions/us-east4/subnetworks/lab-subnet",
            "ip_cidr_range": "10.30.0.0/24",
            "name": "lab-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/fresh-waters-458716-e1/global/networks/lab-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "fresh-waters-458716-e1",
            "purpose": "PRIVATE",
            "region": "us-east4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fresh-waters-458716-e1/regions/us-east4/subnetworks/lab-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": -1232357584
          },
          "dependencies": [
            "google_compute_network.lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-15T08:37:24.079-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.20.0.1",
            "id": "projects/fresh-waters-458716-e1/regions/us-east4/subnetworks/subnet-1",
            "ip_cidr_range": "10.20.0.0/24",
            "name": "subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/fresh-waters-458716-e1/global/networks/my-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "fresh-waters-458716-e1",
            "purpose": "PRIVATE",
            "region": "us-east4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fresh-waters-458716-e1/regions/us-east4/subnetworks/subnet-1",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": -1232358181
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}